--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,12 @@
 </head>
 
 <body>
-
+  <button onclick="handleClick()">点击报错</button>
+  <script>
+    function handleClick(e) {
+      window.a.b = 10
+    }
+  </script>
 </body>
 
 </html>
